Git_WGBH_QC/src/objects/Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations and Pledges</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checked box means that there is a benefit associated to this recurring pledge.</description>
        <inlineHelpText>There is a benefit on this recurring pledge opportunity.</inlineHelpText>
        <label>Benefit Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date revenue will be recognized</description>
        <inlineHelpText>Date you expect the first payment to be received</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor_Name__c</fullName>
        <formula>if(
  LEN(Contact__c)&gt;0,
  Contact__r.FirstName  &amp; &quot; &quot; &amp; Contact__r.LastName,
   Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <formula>IF( text(Schedule_Type__c)=$Label.RecurringDonationMultiplyValue , Amount__c , IF(Installments__c&gt;0,Amount__c / Installments__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label># of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Balance__c</fullName>
        <formula>pledge_amount__c -  paid_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge__c</fullName>
        <description>Pledge # will be a string that will show the payment identifier associated to the installment if applicable.</description>
        <inlineHelpText>Pledge # from the TA payment record</inlineHelpText>
        <label>Pledge #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiply By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divide By</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Campaign_Source_Code__c</fullName>
        <description>Source Code from the campaign it may be related to</description>
        <label>TA Campaign Source Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaTransactions_Id_Short__c</fullName>
        <label>TaTransactions_Id_Short</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaTransactions_Id__c</fullName>
        <description>TA Transactions external Id</description>
        <externalId>true</externalId>
        <label>TA Transactions Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>CASE(
 Schedule_Type__c ,
&quot;Multiply By&quot;, Installments__c * Amount__c ,
&quot;Divide By&quot;,Amount__c
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>activity__c</fullName>
        <label>Activity</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Activity Type</description>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type_value__c</fullName>
        <label>Activity Type Value</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adj_gift_seq__c</fullName>
        <description>Adj Gift Seq</description>
        <inlineHelpText>Adj Gift Seq</inlineHelpText>
        <label>Adj Gift Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adjustment_seq__c</fullName>
        <description>Adjustment Seq</description>
        <inlineHelpText>Adjustment Seq</inlineHelpText>
        <label>Adjustment Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alt_transaction_id__c</fullName>
        <description>Alt Transaction Id</description>
        <inlineHelpText>Alt Transaction Id</inlineHelpText>
        <label>Alt Transaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anonymous_code__c</fullName>
        <label>Anonymous Code</label>
        <picklist>
            <picklistValues>
                <fullName>Do not list this gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not list participation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>anonymous_code_value__c</fullName>
        <description>Anonymous Code</description>
        <inlineHelpText>Anonymous Code</inlineHelpText>
        <label>Anonymous Code Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_number__c</fullName>
        <description>Batch Number</description>
        <inlineHelpText>Batch Number</inlineHelpText>
        <label>Batch Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>caller__c</fullName>
        <label>Caller</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>campaign__c</fullName>
        <label>Campaign</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>check_name__c</fullName>
        <description>Check Name</description>
        <inlineHelpText>Check Name</inlineHelpText>
        <label>Check Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_date__c</fullName>
        <description>Commitment Date - This is used with Stock</description>
        <inlineHelpText>Commitment Date</inlineHelpText>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>current_activity__c</fullName>
        <description>Current Activity</description>
        <inlineHelpText>Current Activity</inlineHelpText>
        <label>Current Activity</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_giving_level_amt__c</fullName>
        <description>Current Giving Level Amt</description>
        <inlineHelpText>Current Giving Level Amt</inlineHelpText>
        <label>Current Giving Level Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_updated__c</fullName>
        <description>Date Updated</description>
        <inlineHelpText>Date Updated</inlineHelpText>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>effort__c</fullName>
        <label>Effort</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fund__c</fullName>
        <label>Fund</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fund_type__c</fullName>
        <label>Fund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted, Non-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fund_type_value__c</fullName>
        <description>Fund Type</description>
        <inlineHelpText>Fund Type</inlineHelpText>
        <label>Fund Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_date__c</fullName>
        <description>Gift Date</description>
        <inlineHelpText>Gift Date</inlineHelpText>
        <label>Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gift_description__c</fullName>
        <description>Gift Description - This is used with Stock</description>
        <inlineHelpText>Gift Description</inlineHelpText>
        <label>Gift Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_kind__c</fullName>
        <label>Gift Kind</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Pledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gift_kind_value__c</fullName>
        <description>Gift Kind</description>
        <inlineHelpText>Gift Kind</inlineHelpText>
        <label>Gift Kind Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_seq__c</fullName>
        <description>Gift Seq</description>
        <inlineHelpText>Gift Seq</inlineHelpText>
        <label>Gift Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade/Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Giving Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Pledge Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Mid-level (AI)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gift_type_value__c</fullName>
        <description>Gift Type</description>
        <inlineHelpText>Gift Type</inlineHelpText>
        <label>Gift Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_value__c</fullName>
        <description>Gift Value - This is used with Stock</description>
        <inlineHelpText>Gift Value</inlineHelpText>
        <label>Gift Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>group_type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Bidders/Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership (Basic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service/MDSi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving/PBSd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation/Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweeps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Pledges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test 06/24/02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>group_type_value__c</fullName>
        <description>Group Type</description>
        <inlineHelpText>Group Type</inlineHelpText>
        <label>Group Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>initiative__c</fullName>
        <label>Initiative</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installment_period_value__c</fullName>
        <description>payment_frequence code</description>
        <label>Installment Period Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_payment_date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>list__c</fullName>
        <label>List</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>package__c</fullName>
        <label>Package</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>Paid Amount</description>
        <inlineHelpText>Paid Amount</inlineHelpText>
        <label>Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_amount__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>Payment Amount</inlineHelpText>
        <label>Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Week Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_frequency_value__c</fullName>
        <description>Payment Frequency</description>
        <inlineHelpText>Payment Frequency</inlineHelpText>
        <label>Payment Frequency Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <label>Payment Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method_value__c</fullName>
        <label>Payment Method Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payments_in_schedule__c</fullName>
        <description>Payments In Schedule</description>
        <inlineHelpText>Payments In Schedule</inlineHelpText>
        <label>Payments In Schedule</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_amount__c</fullName>
        <description>Pledge Amount</description>
        <inlineHelpText>Pledge Amount</inlineHelpText>
        <label>Pledge Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_number__c</fullName>
        <label>Pledge Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_status__c</fullName>
        <description>Pledge Status</description>
        <inlineHelpText>Pledge Status</inlineHelpText>
        <label>Pledge Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pledge_status_value__c</fullName>
        <description>Pledge Status Valu</description>
        <inlineHelpText>Pledge Status Valu</inlineHelpText>
        <label>Pledge Status Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prior_activity__c</fullName>
        <description>Prior Activity</description>
        <inlineHelpText>Prior Activity</inlineHelpText>
        <label>Prior Activity</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prior_giving_level_amt__c</fullName>
        <description>Prior Giving Level Amt</description>
        <inlineHelpText>Prior Giving Level Amt</inlineHelpText>
        <label>Prior Giving Level Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <label>Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>Purpose</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recognition_date__c</fullName>
        <description>Recognition Date</description>
        <inlineHelpText>Recognition Date - This is used with Stock</inlineHelpText>
        <label>Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>recognized_gift_amount__c</fullName>
        <description>Recognized Gift Amount</description>
        <inlineHelpText>Recognized Gift Amount</inlineHelpText>
        <label>Recognized Gift Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reg_id__c</fullName>
        <description>Reg Id - May hijack this field to tlk to TA</description>
        <inlineHelpText>Reg Id</inlineHelpText>
        <label>Reg Id</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sale_date__c</fullName>
        <description>Sale Date - This is used with Stock</description>
        <inlineHelpText>Sale Date</inlineHelpText>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sale_value__c</fullName>
        <description>Sale Value - This is used with Stock</description>
        <inlineHelpText>Sale Value</inlineHelpText>
        <label>Sale Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>schedule_start_date__c</fullName>
        <description>Schedule Start Date</description>
        <inlineHelpText>Schedule Start Date</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soft_credit_type__c</fullName>
        <label>Soft Credit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Generic Soft Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift from Related Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Pledge Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution from BFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution from Foundation/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Through Foundation (ZTRUST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefits received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>soft_credit_type_value__c</fullName>
        <description>Soft Credit Type</description>
        <inlineHelpText>Soft Credit Type</inlineHelpText>
        <label>Soft Credit Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solicitor__c</fullName>
        <label>Solicitor</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>Source</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>station_support__c</fullName>
        <description>Station Support</description>
        <inlineHelpText>Station Support</inlineHelpText>
        <label>Station Support</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stock_gift_id__c</fullName>
        <description>Stock Gift Id</description>
        <inlineHelpText>Stock Gift Id</inlineHelpText>
        <label>Stock Gift Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_recurring_donation_id__c</fullName>
        <externalId>true</externalId>
        <label>TA Recurring Donation ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>technique__c</fullName>
        <label>Technique</label>
        <picklist>
            <picklistValues>
                <fullName>Call to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation sent to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolicited Call for Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Technique to update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY technique to convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Strategy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail to Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Name Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Pull</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>technique_value__c</fullName>
        <label>Technique Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transaction_type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>transaction_type_value__c</fullName>
        <description>Transaction Type</description>
        <inlineHelpText>Transaction Type</inlineHelpText>
        <label>Transaction Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Recurring Gift</label>
    <nameField>
        <label>Recurring Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>